# BotStop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
botstop/: __init__.py  __main__.py  api.py  challenge.py  cli.py  fonts.py  mask.py  motion.py  noise.py  render.py  serve.py  service.py  settings.py  store.py  verify.py
botstop/server/: __init__.py  app.py
client/: README.md  package-lock.json  package.json
client/src/: client.ts  index.ts  types.ts  widget.ts
docs/: index.html
docs/challenges/: pool.json
scripts/: build_github_demo.py
tests/: test_api.py  test_challenge.py  test_fit.py  test_github_demo.py  test_noise.py  test_server.py  test_service.py
